css/rubedo.css
.cursor-as-pointer{
    cursor:pointer;
}

.no-list-style{
    list-style: none
}

.rubedo-caption{
    background: rgba(0,0,0,0.75);
    width:100%;
    position:absolute;
    bottom:0;
    left:0;
    padding-left: 10px;
    padding-right: 10px;
    color: #ffffff !important;
}
.rubedo-page-holder{
    background: inherit;
}
.rubedo-admin-drawer{
    background: #f9f9f9;
    color: #000000 !important;
    position: fixed;
    top: 0;
    left: 0;
}
.rubedo-admin-btn{
    position:fixed;
    top:50%;
    left:0;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    z-index: 10000;
}
.rubedo-admin-nav a {
    color: #000000;
    text-align: center;
}
.rubedo-admin-back-btn{
    margin-top: 10px;
    color: #000000 !important;
    margin-bottom: 10px;
}
.rubedo-admin-image-holder{
    margin-top: 60px;
    margin-bottom: 20px;
}
.editable-click{
    border-bottom: none !important;
    color: inherit !important;
    text-decoration: inherit !important;
}

.angular-google-map {
    height: 100%;
    width: 100%;
}

.angular-google-map-container {
    height: 100%;
    width: 100%;
}
.rubedo-places-search{
    max-width: 300px;
    margin-top: 10px;
}

.leftZoneModal, .rightZoneModal {
    top: 15px;
    bottom: 15px;
    position: absolute;
    vertical-align: bottom;
    min-width: 120px;
}

.rightZoneModal, .rightZoneModal span.glyphicon {
    right: 0;
}

.leftZoneModal, .leftZoneModal span.glyphicon {
    left: 0;
}

.rightZoneModal span.glyphicon, .leftZoneModal span.glyphicon{
    position: absolute;
    top: 50%;
}

.rightZoneModal:hover, .leftZoneModal:hover {
    background-color: rgba(0, 0, 0, 0.20);
}

.alphabeticalIndex {
    padding-bottom: 10px;
}

.gallery {
    margin-left: 5px;
    margin-right: 5px;
}

.gallery .caption {
    text-overflow: ellipsis;
    overflow: hidden;
    height: 30px;
}

#rubedoGalleryDetailModal img.img-responsive {
    display: inline;
    max-height: 800px;
}

.resultData .progress {
    width: 70px;
    float: left;
}

.resultData .progress-bar {
    min-width: 30%;
    max-width: 100%;
}

.resultData span.label {
    display: inline-block;
}

.resultData .well {
    height: 140px
}

.rubedo-gmapitem{
    min-height: 120px;
    min-width:300px;
}

